Updated sitenow.scss to fix align-center centering.

--- a/docroot/themes/custom/uids_base/scss/components/sitenow/sitenow.scss
+++ b/docroot/themes/custom/uids_base/scss/components/sitenow/sitenow.scss
@@ -844,10 +844,14 @@ figure.caption.align-right .embedded-entity+figcaption {
 
 // media type image
 
+.align-center {
+  text-align: center;
+}
+
 .embedded-entity.align-center {
+  .media--type-image,
   .field--name-field-media-image {
     margin: 0 auto;
-
   }
 }
 
